updated styling, minor improvements

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -11236,3 +11236,7 @@ header.masthead .site-heading .h1 {
     font-size: 1.5rem;
   }
 }
+
+.timeline-InformationCircle-widgetParent{
+  display: none;
+}
