--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -11230,6 +11230,17 @@ header.masthead .site-heading .h1 {
   text-decoration: none;
   color: #212529;
 }
+
+@media (min-width: 641px) {
+  .post-preview > a > .post-title {
+    font-size: 1rem;
+  }
+
+  .post-img-size {
+    width: 8vh!important;
+    height: 10vh!important;
+  }
+}
 @media (min-width: 992px) {
   .post-preview > a > .post-title {
     font-size: 1.5rem;
@@ -11244,3 +11255,5 @@ header.masthead .site-heading .h1 {
 .timeline-InformationCircle-widgetParent{
   display: none;
 }
+
+a:link { text-decoration: none; }
